<resources>
    <string name="app_name">ProReha</string>
    <string name="app_noname"></string>
    <string name="app_sz">Info</string>
    <string name="app_update">Bearbeiten</string>
    <string name="app_upload">Erstellen</string>
    <string name="app_account">Account Informationen</string>
    <string name="already_have_an_account">Ich habe schon einen Account!</string>
    <string name="register">Registrieren</string>
    <string name="mein_stundenzettel">Mein Stundenzettel</string>
    <string name="dein_stundenzettel">Dein Stundenzettel:</string>
    <string name="massage">Massage</string>
    <string name="_12_06_2006">12.06.2006</string>
    <string name="_40_min">40 min</string>
    <string name="patient_war_sehr_verspannt_n_chste_sitzung_intensivere_behandlung">Patient war sehr verspannt, nächste Sitzung intensivere Behandlung</string>
    <string name="loading">Loading...</string>
    <string name="platzhalter">Mein Stundenzettel bearbeiten</string>
    <string name="register_here">Hier registrieren</string>
    <string name="full_name">Vollständiger Name</string>
    <string name="email">Email</string>
    <string name="password">Passwort</string>
    <string name="login_now">Jetzt einloggen</string>
    <string name="mein_profil">Mein Profil</string>
    <string name="todo">TODO</string>
    <string name="meine_daten">Meine Daten</string>
    <string name="gesamte_arbeitszeit">Gesamte Arbeitszeit:</string>
    <string name="delete">TODO</string>
    <string name="fab">TODO</string>
    <string name="login_here">Login here</string>
    <string name="imageView">TODO</string>
    <string name="Mail">Email</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Noch keinen Account?</string>
    <string name="register_now">Jetzt registrieren</string>
</resources>
