<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_gravity="center_vertical"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:background="@drawable/lavender_border"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dein_stundenzettel"
            android:textColor="#000000"
            android:textSize="15sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/underline" />

    <TextView
        android:id="@+id/detailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/massage"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/underline" />

    <TextView
        android:id="@+id/detailDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="10dp"

        android:text="@string/_12_06_2006"
        android:textAlignment="center"
        tools:ignore="RtlCompat"
        app:drawableStartCompat="@drawable/ic_calender" />

    <TextView
        android:id="@+id/detailDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="10dp"
        android:text="@string/_40_min"
        android:textAlignment="center"
        tools:ignore="RtlCompat"
        app:drawableLeftCompat="@drawable/ic_time"
        app:drawableStartCompat="@drawable/ic_time" />

    <TextView
        android:id="@+id/detailNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="10dp"
        android:text="@string/patient_war_sehr_verspannt_n_chste_sitzung_intensivere_behandlung"
        app:drawableLeftCompat="@drawable/ic_note"
        app:drawableStartCompat="@drawable/ic_note" />

    </LinearLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.clans.fab.FloatingActionMenu
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            app:menu_colorNormal="@color/orange"
            app:menu_colorPressed="@color/orange2"
            app:menu_fab_size="normal"
            app:menu_icon="@drawable/ic_new"
            app:menu_openDirection="up"
            app:menu_showShadow="true">

            <com.github.clans.fab.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editBtn"
                android:src="@drawable/ic_edit"
                app:fab_showShadow="true"
                app:fab_colorNormal="@color/orange"
                app:fab_size="mini"/>

            <com.github.clans.fab.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/deleteBtn"
                android:src="@drawable/ic_delete"
                app:fab_showShadow="true"
                app:fab_colorNormal="@color/red"
                app:fab_size="mini"/>

        </com.github.clans.fab.FloatingActionMenu>

    </RelativeLayout>

</LinearLayout>